--- a/wayana-details.html
+++ b/wayana-details.html
@@ -38,16 +38,16 @@
             <ul class="navbar-nav justify-content-between w-100">
             <div class="d-lg-flex d-xl-flex flex-wrap align-items-center">
                 <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="flights.html">Flights</a>
+                <a class="nav-link" aria-current="page" href="/">Flights</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="hotels.html">Hotels</a>
+                <a class="nav-link" href="/">Hotels</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link active" href="wayana.html">Wayana</a>
+                <a class="nav-link active" href="offers.html">Wayana</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="charter_flights.html">Charter Flights</a>
+                <a class="nav-link" href="charter-flights.html">Charter Flights</a>
                 </li>
             </div>
             <div class="d-lg-flex d-xl-flex flex-wrap align-items-center">
@@ -761,15 +761,15 @@
           </div>
           <div class="footer-item">
             <img src="assets/images/icons/white-arrow.svg" class="of-contain me-2" height="10px" alt="">
-            <a href="/flights.html">Flights</a>
+            <a href="//">Flights</a>
           </div>
           <div class="footer-item">
             <img src="assets/images/icons/white-arrow.svg" class="of-contain me-2" height="10px" alt="">
-            <a href="/hotels.html">Hotels</a>
+            <a href="//">Hotels</a>
           </div>
           <div class="footer-item">
             <img src="assets/images/icons/white-arrow.svg" class="of-contain me-2" height="10px" alt="">
-            <a href="/wayana.html">Wayana</a>
+            <a href="/offers.html">Wayana</a>
           </div>
         </div>
         <div class="col-md-6 col-lg-3 col-xl-3 col-6 mb-3-sm">
