--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
                     <a class="nav-link active" aria-current="page" href="#">Flights</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="hotels.html">Hotels</a>
+                    <a class="nav-link" href="/">Hotels</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="wayana.html">Wayana</a>
+                    <a class="nav-link" href="offers.html">Wayana</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="charter_flights.html">Charter Flights</a>
+                    <a class="nav-link" href="charter-flights.html">Charter Flights</a>
                   </li>
                 </div>
                 <div class="d-lg-flex d-xl-flex flex-wrap align-items-center">
@@ -476,7 +476,7 @@
           <span class="text-light-primary font-sm">Offers</span>
         </div>
         <div class="main-title">
-          <h3>“Wayana” Offers <a href="wayana.html" class="show-all">Show All >></a></h3>
+          <h3>“Wayana” Offers <a href="offers.html" class="show-all">Show All >></a></h3>
         </div>
       </div>
       <div class="content">
@@ -654,15 +654,15 @@
           </div>
           <div class="footer-item">
             <img src="assets/images/icons/white-arrow.svg" class="of-contain me-2" height="10px" alt="">
-            <a href="/flights.html">Flights</a>
+            <a href="//">Flights</a>
           </div>
           <div class="footer-item">
             <img src="assets/images/icons/white-arrow.svg" class="of-contain me-2" height="10px" alt="">
-            <a href="/hotels.html">Hotels</a>
+            <a href="//">Hotels</a>
           </div>
           <div class="footer-item">
             <img src="assets/images/icons/white-arrow.svg" class="of-contain me-2" height="10px" alt="">
-            <a href="/wayana.html">Wayana</a>
+            <a href="/offers.html">Wayana</a>
           </div>
         </div>
         <div class="col-md-6 col-lg-3 col-xl-3 col-6 mb-3-sm">
