--- a/domestic-details.html
+++ b/domestic-details.html
@@ -25,7 +25,7 @@
   <header class="internal-header position-relative" style="background-image: url(assets/images/domestic-header.png), linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)); height: 500px;">
     <nav class="navbar navbar-expand-lg py-4">
     <div class="container">
-        <a class="navbar-brand" href="/"><img src="assets/images/Logo.png"  class="of-contain logo main-logo" alt=""></a>
+        <a class="navbar-brand" href="index.html"><img src="assets/images/Logo.png"  class="of-contain logo main-logo" alt=""></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
@@ -38,10 +38,10 @@
             <ul class="navbar-nav justify-content-between w-100">
             <div class="d-lg-flex d-xl-flex flex-wrap align-items-center">
                 <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="/">Flights</a>
+                <a class="nav-link" aria-current="page" href="index.html">Flights</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="/">Hotels</a>
+                <a class="nav-link" href="/index.html">Hotels</a>
                 </li>
                 <li class="nav-item">
                 <a class="nav-link" href="offers.html">Wayana</a>
