adding preloader and arabic styles

--- a/cruise-details.html
+++ b/cruise-details.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar">
 
 <head>
   <meta charset="UTF-8">
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="assets/bootstrap/bootstrap.css">
+  <link rel="stylesheet" href="assets/bootstrap/bootstrap-rtl.css">
   <link rel="stylesheet" href="assets/css/nice-select.css">
   <link rel="stylesheet" href="assets/css/select2.css">
   <link rel="stylesheet" href="assets/css/intlTelInput.css">
@@ -22,6 +22,11 @@
 </head>
 
 <body>
+  <div id="loader-mask">
+    <div id="loader">
+        <div><img loading="lazy" src="assets/images/main-logo.svg" alt=""></div>
+    </div>
+  </div>
   <header class="internal-header position-relative" style="background-image: url(assets/images/cruis-header.png), linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)); height: 500px;">
     <nav class="navbar navbar-expand-lg py-4">
     <div class="container">
