--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -8,8 +8,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <!-- <link rel="stylesheet" href="assets/bootstrap/bootstrap.css"> -->
-  <link rel="stylesheet" href="assets/bootstrap/bootstrap-rtl.css">
+  <link rel="stylesheet" href="assets/bootstrap/bootstrap.css">
+  <!-- <link rel="stylesheet" href="assets/bootstrap/bootstrap-rtl.css"> -->
   <link rel="stylesheet" href="assets/css/nice-select.css">
   <link rel="stylesheet" href="assets/css/select2.css">
   <link rel="stylesheet" href="assets/css/flatPicker.css">
@@ -198,7 +198,7 @@
                   <form action="" autocomplete="off">
                     <div class="radios">
                       <div class="form-group d-flex align-items-center">
-                        <input type="radio" name="round-trip" id="one-way" class="me-1">
+                        <input type="radio" name="round-trip" id="one-way" checked class="me-1">
                         <label for="one-way">One Way</label>
                       </div>
                       <div class="form-group d-flex align-items-center">
@@ -237,9 +237,18 @@
                         </div>
                       </div>
                       <div class="col-md-6 col-lg-6 col-xl-7 col-12 mb-3">
-                        <div class="row justify-content-between">
-                          <div class="col-md-12 col-lg-5 col-xl-5 col-12 mb-3-sm">
+                        <div class="row justify-content-start">
+                          <div class="col-md-12 col-lg-3 col-xl-3 col-12 mb-3-sm">
                             <label class="mb-1 text-secondary font-sm fw-sm">Departure Date</label>
+                            <div class="input-group position-relative">
+                              <span class="input-group-text" id="basic-addon3">
+                                <img src="assets/images/icons/Calendar.svg" height="20px" class="of-contain" alt="">
+                              </span>
+                              <input type="date" class="form-control flatPicker included-input ps-2" aria-describedby="basic-addon3" placeholder="Pick a Date">
+                            </div>
+                          </div>
+                          <div class="col-md-12 col-lg-3 col-xl-3 col-12 mb-3-sm d-none" id="return-date">
+                            <label class="mb-1 text-secondary font-sm fw-sm">Return Date</label>
                             <div class="input-group position-relative">
                               <span class="input-group-text" id="basic-addon3">
                                 <img src="assets/images/icons/Calendar.svg" height="20px" class="of-contain" alt="">
@@ -257,16 +266,58 @@
                                 <option value="" disabled selected>Travelers, Class</option>
                                 <option value="">VIP</option>
                                 <option value="">Class A</option>
-                                <option value="">Class B</option>
-                                <option value="">Class C</option>
+                                <option value="other">Other</option>
                               </select>
                             </div>
                           </div>
-                          <div class="col-md-12 col-lg-3 col-xl-3 col-12 mb-3-sm d-flex align-items-end  mt-md-3 mt-lg-0">
+                          <div class="col-md-12 col-lg-2 col-xl-2 col-12 mb-3-sm d-flex align-items-end  mt-md-3 mt-lg-0">
                             <button type="submit" class="main-btn">Search</button>
                           </div>
                         </div>
                       </div>
+                    </div>
+                    <div class="mt-3 row d-none" id="another-reservation">
+                      <div class="col-md-6 col-lg-6 col-xl-5 col-12 mb-3">
+                        <div class="form-groups">
+                          <div class="form-group">
+                            <label class="mb-1 text-secondary font-sm fw-sm">Taking Off</label>
+                            <div class="input-group position-relative">
+                              <span class="input-group-text" id="basic-addon1">
+                                <img src="assets/images/icons/TakingOff.svg" height="20px" class="of-contain" alt="">
+                              </span>
+                              <input type="text" id="takingOff" class="form-control included-input" aria-describedby="basic-addon1" placeholder="City or Airport">
+                            </div>
+                          </div>
+                          <div class="d-flex align-items-center justify-content-center mt-4" style="width: 10%;">
+                            <img src="assets/images/icons/switch.svg" id="switcher" height="18px" class="of-contain" alt="">
+                          </div>
+                          <div class="form-group">
+                            <label class="mb-1 text-secondary font-sm fw-sm">Landing</label>
+                            <div class="input-group position-relative">
+                              <span class="input-group-text" id="basic-addon2">
+                                <img src="assets/images/icons/Landing.svg" height="20px" class="of-contain" alt="">
+                              </span>
+                              <input type="text" id="landing" class="form-control included-input" aria-describedby="basic-addon2" placeholder="City or Airport">
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-md-6 col-lg-6 col-xl-7 col-12 mb-3">
+                        <div class="row justify-content-start">
+                          <div class="col-md-12 col-lg-3 col-xl-3 col-12 mb-3-sm">
+                            <label class="mb-1 text-secondary font-sm fw-sm">Departure Date</label>
+                            <div class="input-group position-relative">
+                              <span class="input-group-text" id="basic-addon3">
+                                <img src="assets/images/icons/Calendar.svg" height="20px" class="of-contain" alt="">
+                              </span>
+                              <input type="date" class="form-control flatPicker included-input ps-2" aria-describedby="basic-addon3" placeholder="Pick a Date">
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="pb-4 d-none" id="repeater-link">
+                      <a href="#" id="repeater" class="text-acent font-normal">+ Add More</a>
                     </div>
                     <div class="stop-flights">
                       <div class="d-flex align-items-center">
@@ -336,12 +387,11 @@
                                 <span class="input-group-text" id="basic-addon3">
                                   <img src="assets/images/icons/User-dark.svg" height="20px" class="of-contain" alt="">
                                 </span>
-                                <select name="" class="niceSelect included-input form-control" id="">
+                                <select name="" class="niceSelect included-input form-control hotel-reservation" id="">
                                   <option value="" disabled>Travelers, Class</option>
                                   <option value="" selected>1 Room, 2 Guests</option>
                                   <option value="">Class A</option>
-                                  <option value="">Class B</option>
-                                  <option value="">Class C</option>
+                                  <option value="other">Other Options</option>
                                 </select>
                               </div>
                             </div>
@@ -360,6 +410,49 @@
       </div>
     </div>
   </header>
+
+  <section class="py-4 d-none" id="travellers_and_class">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-1 col-lg-1 col-1"></div>
+        <div class="col-md-3 col-lg-2 col-4">
+          <h4 class="font-normal text-primary">Adults (+12 Years)</h4>
+        </div>
+        <div class="col-md-3 col-lg-2 col-4">
+          <h4 class="font-normal text-primary">Childrens (0-11 Years)</h4>
+        </div>
+      </div>
+      <div class="row align-items-center mb-3" id="repeated-div">
+        <div class="col-md-1 col-lg-1 col-1">
+          <img src="assets/images/icons/Bed-category.svg" class="of-contain" height="30px" alt="">
+        </div>
+        <div class="col-md-3 col-lg-2 col-4">
+          <select name="" class="niceSelect form-control w-100" id="">
+            <option value="0">0</option>
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+          </select>
+        </div>
+        <div class="col-md-3 col-lg-2 col-4">
+          <select name="" class="niceSelect form-control w-100" id="">
+            <option value="0">0</option>
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+          </select>
+        </div>
+        <div class="col-md-3 col-lg-2 col-4">
+          <a href="#" class="font-lg text-danger"><i class="fa fa-times-circle"></i></a>
+        </div>
+      </div>
+      <div class="repeat-reservation mt-3">
+        <a href="#" id="repeat-reservation" class="text-acent font-normal">+ Add More</a>
+      </div>
+    </div>
+  </section>
 
   <section class="services">
     <div class="container">
